# movie

./: CMakeLists.txt  CMakeLocal.txt  Movie.cpp  Movie.h  MovieRank.cpp  MovieRank.h  adjustrank.cpp  adjustrank.h  adjustrank.ui  inputMovie.ui  inputmovie.cpp  inputmovie.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  movieBank.csv  moviename.txt  suggest.cpp  suggest.h  suggest.ui
